styled hamburger menu - made fixed on small devices

--- a/public/sass/pages/_index.scss
+++ b/public/sass/pages/_index.scss
@@ -51,20 +51,34 @@ a{
 .main{
   color: #4b5051;
   padding: 30px 15px 15px 15px;
+  text-align: center;
+
   @include break(sm) {
       padding:30px 20px 20px 20px
   };
+
   @include break(lg) {
       flex-grow: 1;
       margin-left:300px;
+      text-align: justify;
   };
 
 }
   .main-hamburger{
+    background-color: rgb(36, 34, 73);
+    color:rgb(237, 237, 237);
     font-size: 1.8em;
     margin-bottom: 40px;
+    position: fixed;
+    border-radius: 2px;
+    box-shadow: 0px 3px 3px rgba(0,0,0,0.4);
+    padding: 6px;
+    z-index: 1999;
+    top:8px;
+    left: 20px;
     @include break(lg) {
       display:none;
+      position: static;
     }
     &:hover{
       cursor: pointer;
